# human_feature_detection

./: CMakeLists.txt  README.md  README_en.md  install.sh  model_setup.py  package.xml  setup.cfg  setup.py
example/: sample_2d.py  sample_2d_ros.py  sample_3d.py
human_feature_detection/: CMakeLists.txt  package.xml
human_feature_detection/example/: sample_2d.py  sample_3d.py
human_feature_detection/include/human_feature_detection/: point_cloud_processor.hpp
human_feature_detection/launch/: human_feature_detection.launch.xml
human_feature_detection/scripts/: feature_detect.py
human_feature_detection/src/: feature_detect_3d.cpp
human_feature_detection_msgs/: CMakeLists.txt  package.xml
human_feature_detection_python/: install.sh  model_setup.py  package.xml  setup.cfg  setup.py
human_feature_detection_python/example/: sample_2d.py
human_feature_detection_python/human_feature_detection_python/: feature_detect.py
human_feature_detection_python/launch/: human_feature_detection.launch.py
include/human_feature_detect/: point_cloud_processor.hpp
include/human_feature_detection/: point_cloud_processor.hpp
launch/: camera.launch  human_feature_detect.launch  human_feature_detection.launch
msg/: Feature.msg
scripts/: client.py  color_recognition.py  feature_age_and_sex.py  feature_detect.py
scripts/smach_files/: HumanLocation.py  LocationMovement.py  MINI_rotate.py  MINI_tilt_controll.py  MINI_wheel.py  MoveToGuest.py  SpeakAndListen.py  __init__.py  aws_api_face.py  cbk_scnnr.py  detect_human_length.py  e301_right_floor.yaml  facenet_sobit.py  location_choi_laboratry.yaml  location_rcjp_2023_shiga.yaml  move_and_location.yaml  picture_trimming.py  save_picture.py  speech.py  test_numpy.py  ulfg_face_detect_controll.py
src/: color_recognition.cpp  feature_detect.cpp  feature_detect.py  feature_detect_3d.cpp  point_cloud_processor.cpp
srv/: Feature3d.srv  Features.srv  ImageToFeature.srv  ImageToFeatures.srv  PathToFeature.srv  PathToFeatures.srv
